--- a/src/main/resources/templates/fragments/rol/rolform.html
+++ b/src/main/resources/templates/fragments/rol/rolform.html
@@ -6,8 +6,16 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
-<div class="container">
-    <h2>Rol Detalle</h2>
+<div class="row">
+    <div class="col-md-3">
+                        <th:block th:include="../templates/menu"></th:block>
+                    </div>
+    <div class="col-md-9">
+    <div class="row text-center">
+        <br><br>
+                        <img src="../../static/image/roles.png" width="150" th:src="@{/image/roles.png}"/>
+                    </div>
+        <h3 align="center">Rol Detalle</h3>
     <div>
         <form class="form-horizontal" th:object="${rol}" th:action="@{../rol}" method="post">
             <input type="hidden" th:field="*{codigorol}"/>
@@ -25,7 +33,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Descripcion de rol:</label>
+                <label class="col-sm-2 control-label">Descripcion de Rol:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" required="true" size="30" maxlength="30" th:field="*{descripcionrol}"/>
                 </div>
@@ -43,6 +51,7 @@
         </form>
     </div>
 </div>
+    </div>
 
 </body>
 <script th:inline="javascript">
