--- a/src/main/resources/templates/fragments/usuario/usuarios.html
+++ b/src/main/resources/templates/fragments/usuario/usuarios.html
@@ -5,37 +5,51 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
-<div class="container">
-    e aqui
+<div class="row">
+ <div class="col-md-3">
+                        <th:block th:include="../templates/menu"></th:block>
+                    </div>
+    <div class="col-md-9">
+         <div class="row text-center">
+                        <img src="../../static/image/images.jpeg" width="200" th:src="@{/image/images.jpeg}"/>
+                    </div>
+        <h3 align="center">Todos los Usuarios</h3>
     <div th:if="${not #lists.isEmpty(usuarios)}">
-        <h2>Todos los Usuarios</h2>
-        <table class="table table-striped">
+        <div class="table-responsive">
+  <table class="table">
+        <!--<table class="table table-striped">-->
             <tr>
                 <th>Codigo</th>
                 <th>Nombre</th>
-                <th>contra</th>
-                <th>control contra</th>
-                <th>estado</th>
-                <th>f ingreso </th>
-                <th>f caducidad</th>
-                <th>f baja</th>
+                <!--<th>Contrasena</th>-->
+                <th>Control contra</th>
+                <th>Estado</th>
+                <th>Fecha Ingreso </th>
+                <th>Fecha Caducidad</th>
+                <th>Fecha Baja</th>
+                <th>Acciones</th>
+                <th>  </th>
+                <th>  </th>
+                
             </tr>
             <tr th:each="usuario : ${usuarios}">
                 <td th:text="${usuario.codigousuario}">Codigo</td>
                 <td th:text="${usuario.nombreusuario}">Nombre</td>
-                <td th:text="${usuario.contraseniausuario}">contraseña</td>
+                <!--<td th:text="${usuario.contraseniausuario}">Contrasena</td>-->
                 <td th:text="${usuario.controlcontrasenia}">control</td>
-                <td th:text="${usuario.estadousuario}">estado</td>
-                <td th:text="${usuario.fechaingreso}">fecha ingreso</td>
-                <td th:text="${usuario.fechacaducidad}">fecha caducidad</td>
-                <td th:text="${usuario.fechabaja}">fecha baja</td>
+                <td th:text="${usuario.estadousuario}">Estado</td>
+                <td th:text="${usuario.fechaingreso}">fecha Ingreso</td>
+                <td th:text="${usuario.fechacaducidad}">Fecha Caducidad</td>
+                <td th:text="${usuario.fechabaja}">Fecha Baja</td>
                 <td><a th:href="${'./show/' + usuario.codigousuario}" class="btn btn-default">Mostrar</a></td>
-                <td><a th:href="${'./edit/' + usuario.codigousuario}" class="btn btn-default">Edit</a></td>
-                 <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${usuario.codigousuario} + '\');'" >Delete</a></td>
+                <td><a th:href="${'./edit/' + usuario.codigousuario}" class="btn btn-default">Editar</a></td>
+                 <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${usuario.codigousuario} + '\');'" >Eliminar</a></td>
                 <!--<td><a th:href="${'./delete/' + usuario.codigousuario}" class="btn btn-danger">Delete</a></td>-->
             </tr>
         </table>
     </div>
 </div>
-</body>
+    </div>
+</body
+
 </html>
