modificado estilo de nemonico y fecha

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -202,3 +202,15 @@ body {
    color: yellow;
 }
 
+
+.contenedorizq{
+  width: 100%;
+  float: left;
+  background-color: #82a77d;
+}
+
+
+.der{
+  float: right;
+  margin: 0% 1%;
+}
