--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -3,9 +3,16 @@
     <head lang="en">
     <title>Crear Asistencia Capacitacion</title>
     <th:block th:include="../templates/header"></th:block>
-    <div ><label  >pnt_asca</label> </div>
+   
 </head>
 <body>
+     <div ><label  >pnt_asca</label> </div>
+       <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
