--- a/src/main/resources/templates/fragments/beneficio/beneficioform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioform.html
@@ -4,9 +4,19 @@
 
     <title>Crear beneficio</title>
   <th:block th:include="../templates/header"></th:block>
-  <div ><label  >pnt_crbe</label> </div>
+  
   </head>
+  
 <body>
+   
+     
+       <div class="contenedorizq"> <label  >pnt_crbe</label> 
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div>
 <div class="row">
      <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
