--- a/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionform.html
@@ -10,9 +10,17 @@
 <link rel="stylesheet"
 	th:href="@{/css/jquery-ui.min.css}" />
     <th:block th:include="../templates/header"></th:block>
-    <div ><label  >pnt_ceca</label> </div>
+   
 </head>
 <body>
+    
+     <div class="contenedorizq"><label  >pnt_ceca</label>  
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
     <div class="row">
         <div class="col-md-3">
             <th:block th:include="../templates/menu"></th:block>
