--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -4,9 +4,17 @@
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <title>Crear Capacitador</title>
     <th:block th:include="../templates/header"></th:block>
-    <div ><label  >pnt_ccap</label> </div>
+    
 </head>
 <body>
+    
+   <div class="contenedorizq"><label  >pnt_ccap</label> 
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
     <!--<div class="container">-->
     <div class="row">
         <div class="col-md-3">
