--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -9,9 +9,16 @@
 
     <title>Crear Comite</title>
   <th:block th:include="../templates/header"></th:block>
-  <div ><label  >pnt_crco</label> </div>
+  
   </head>
 <body>
+     <div class="contenedorizq"><label  >pnt_crco</label>  
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
     <div class="row">
         <div class="col-md-3">
          <th:block th:include="../templates/menu"></th:block>
