--- a/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
+++ b/src/main/resources/templates/fragments/costocapacitacion/costocapacitacionform.html
@@ -5,9 +5,16 @@
 
     <title>Crear Costo de Capacitacion</title>
   <th:block th:include="../templates/header"></th:block>
-  <div ><label  >pnt_cosc</label> </div>
+ 
   </head>
 <body>
+      <div class="contenedorizq"><label  >pnt_cosc</label> 
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
 <div class="row">
         
          <div class="col-md-3">
