--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivoform.html
@@ -4,9 +4,16 @@
 
     <title>Crear Cuadro directivo</title>
   <th:block th:include="../templates/header"></th:block>
-  <div ><label  >pnt_crcd</label> </div>
+ 
   </head>
 <body>
+       <div class="contenedorizq"><label  >pnt_crcd</label>  
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
      <div class="row">
         <div class="col-md-3">
          <th:block th:include="../templates/menu"></th:block>
