--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -4,9 +4,16 @@
 
     <title>Formacion Academica</title>
   <th:block th:include="../templates/header"></th:block>
-  <div ><label  >pnt_cem4</label> </div>
+ 
   </head>
 <body>
+     <div class="contenedorizq"><label  >pnt_cem4</label>
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
 <div class="row">
         <div class="col-md-3">
          <th:block th:include="../templates/menu"></th:block>
