--- a/src/main/resources/templates/fragments/puesto/puestoform.html
+++ b/src/main/resources/templates/fragments/puesto/puestoform.html
@@ -39,6 +39,13 @@
   <th:block th:include="../templates/header"></th:block>
   </head>
 <body>
+     <div class="contenedorizq"><label  >pnt_cpto</label>
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div><br>
 <!--<div class="container">-->
  <div class="row">
  <div class="col-md-3">
@@ -65,7 +72,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Categoria del Puesto(*):</label>
+                <label class="col-sm-5 control-label">Categoria del Puesto(*):</label>
                 <div class="col-sm-7">
                     <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
                     <select class="form-control" name="categoriapuesto" >
