--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
@@ -26,7 +26,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <h3 align="center">Crear Evaluacion  de Capacitacion</h3>
             <div>
  
-                <form class="form-horizontal" th:object="${evaluacioncapacitacion}" th:action="@{../evaluacioncapacitacion}" method="post">       
+                <form class="form-horizontal" th:object="${evaluacioncapacitacionform}" th:action="@{../evaluacioncapacitacion}" method="post">       
 
                     <div class="col-md-6">
 
@@ -34,17 +34,16 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <div class="form-group">
                 <label class="col-sm-5 control-label">Capacitacion:</label>
                 <div class="col-sm-7">
-                    <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
+                    <select class="form-control" th:field="*{evaluacioncapacitacion.codigocapacitacion}" >
                          <option value="">-- Seleccione la Capacitacion --</option>
-                                <option th:each="c:${capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
+                                <option th:each="c:${evaluacioncapacitacionform.capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
                             </select>
-                    <!--<input type="number" class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}"/>-->
                 </div>
             </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Lugar de la Capacitacion(*):</label>
                             <div class="col-sm-7">
-                                <input type="text" class="form-control" max="100" maxlength="100" required="true" th:field="*{lugarcapacitacion}"/>
+                                <input type="text" class="form-control" max="100" maxlength="100" required="true" th:field="*{evaluacioncapacitacion.lugarcapacitacion}"/>
                             </div>
                         </div>
 
@@ -59,14 +58,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Hora(*):</label>
                             <div class="col-sm-7">
-                                <input type="text" class="form-control" th:field="*{horaevualuacioncapacitacion}"/>
+                                <input type="text" class="form-control" th:field="*{evaluacioncapacitacion.horaevualuacioncapacitacion}"/>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Dominio del tema(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
-                                <select class="form-control" name="dominiotema" >
+                                <select class="form-control" name="evaluacioncapacitacion.dominiotema" >
                                     <option>Si</option>
                                     <option>No</option>
 
@@ -78,7 +77,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Habilidades de Comunicacion(*):</label>
                             <div class="col-sm-3">
 
-                                <select class="form-control" name="habilidadcomunicacion" >
+                                <select class="form-control" name="evaluacioncapacitacion.habilidadcomunicacion" >
                                     <option>Si</option>
                                     <option>No</option>
 
@@ -90,7 +89,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Llena sus Espectativas(*):</label>
                             <div class="col-sm-3">
 
-                                <select class="form-control" name="espectativa" >
+                                <select class="form-control" name="evaluacioncapacitacion.espectativa" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -101,7 +100,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Contenido se Desarrollo con Claridad(*):</label>
                             <div class="col-sm-3">
 
-                                <select class="form-control" name="claridadtema" >
+                                <select class="form-control" name="evaluacioncapacitacion.claridadtema" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -112,7 +111,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Aclara dudas con precision(*):</label>
                             <div class="col-sm-3">
 
-                                <select class="form-control" name="alclaradudas" >
+                                <select class="form-control" name="evaluacioncapacitacion.alclaradudas" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -123,7 +122,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Mantiene el Interes del Tema(*):</label>
                             <div class="col-sm-3">
 
-                                <select class="form-control" name="interestema" >
+                                <select class="form-control" name="evaluacioncapacitacion.interestema" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -134,7 +133,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Satisface en el tema(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{nivelpuesto}"/>-->
-                                <select class="form-control" name="satifacciondetema" >
+                                <select class="form-control" name="evaluacioncapacitacion.satifacciondetema" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -145,7 +144,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Comprension del tema(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="comprenciondetema" >
+                                <select class="form-control" name="evaluacioncapacitacion.comprenciondetema" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -157,7 +156,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Planeacion del tiempo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="planeaciontiempo" >
+                                <select class="form-control" name="evaluacioncapacitacion.planeaciontiempo" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -168,7 +167,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Distribucion del Tiempo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="distribuciontiempo" >
+                                <select class="form-control" name="evaluacioncapacitacion.distribuciontiempo" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -178,7 +177,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Contenido Claro(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="contenidoclaro" >
+                                <select class="form-control" name="evaluacioncapacitacion.contenidoclaro" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -188,7 +187,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">El contenido Es aplicable a su trabajo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="contenidoaplicadotrabajo" >
+                                <select class="form-control" name="evaluacioncapacitacion.contenidoaplicadotrabajo" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -198,7 +197,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Satisfecho con el contenido(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="satisfechocontenido" >
+                                <select class="form-control" name="evaluacioncapacitacion.satisfechocontenido" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -208,7 +207,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Es necesaria la Capacitacion(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="necesariocapacitacion" >
+                                <select class="form-control" name="evaluacioncapacitacion.necesariocapacitacion" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -218,7 +217,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">El equipo tecnologico es el adecuado(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="equipotecnologico" >
+                                <select class="form-control" name="evaluacioncapacitacion.equipotecnologico" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -228,7 +227,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Material Usado fue el apropiado(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="materialutilizado" >
+                                <select class="form-control" name="evaluacioncapacitacion.materialutilizado" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -238,7 +237,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Tiempo Capacitacion fue optimo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="tiempocapacitacionoptimo" >
+                                <select class="form-control" name="evaluacioncapacitacion.tiempocapacitacionoptimo" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -249,7 +248,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Puntualidad Fecha y Hora(*):</label>
                             <div class="col-sm-6">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="puntualidad" >
+                                <select class="form-control" name="evaluacioncapacitacion.puntualidad" >
                                     <!--<option> </option>-->
                                     <option>Si</option>
                                     <option>No</option>
@@ -261,7 +260,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Comentario o Sugerencia(*):</label>
                             <div class="col-sm-7">
                                 
-                                <input type="text" class="form-control" max="100" maxlength="100" required="true" th:field="*{comentario}"/>
+                                <input type="text" class="form-control" max="100" maxlength="100" required="true" th:field="*{evaluacioncapacitacion.comentario}"/>
                             </div>
                         </div>
                     </div>
