--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -159,6 +159,15 @@
 					</ul>
 				</li>
                                 
+                                  <li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Inasistencias <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
+					<ul class="dropdown-menu forAnimate" role="menu">
+                                                <li><a href="#" th:href="@{/inasistencias/}">Consultar Inasistencias</a></li>
+                                                <li><a href="#" th:href="@{/inasistencias/new/inasistencia}">Crear Inasistencias</a></li>
+                                                <!--<li><a href="#" th:href="@{/comisiones/reporte/comision}">Reporte de Comisiones</a></li>-->
+					</ul>
+				</li>
+                                
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Puestos <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
