--- a/src/main/resources/templates/fragments/beneficio/beneficios.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficios.html
@@ -5,6 +5,13 @@
     <th:block th:include="../templates/header"></th:block>
 </head>
 <body>
+        <div class="contenedorizq"> 
+    <label  class="der">
+    <script >
+var f = new Date();
+document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
+</script></label>
+</div>
 <div class="row">
      <div class="col-md-3">
                         <th:block th:include="../templates/menu"></th:block>
