--- a/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
+++ b/src/main/resources/templates/fragments/evaluacioncapacitacion/evaluacioncapacitacionform.html
@@ -34,7 +34,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <div class="form-group">
                 <label class="col-sm-5 control-label">Capacitacion:</label>
                 <div class="col-sm-7">
-                    <select class="form-control" th:field="*{evaluacioncapacitacion.codigocapacitacion}" >
+                    <select class="form-control" name="codigocapacitacion.codigocapacitacion">
                          <option value="">-- Seleccione la Capacitacion --</option>
                                 <option th:each="c:${evaluacioncapacitacionform.capacitaciones}" th:value="${c.codigocapacitacion}" th:text="${c.nombrecapacitacion}"></option>
                             </select>
@@ -43,7 +43,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Lugar de la Capacitacion(*):</label>
                             <div class="col-sm-7">
-                                <input type="text" class="form-control" max="100" maxlength="100" required="true" th:field="*{evaluacioncapacitacion.lugarcapacitacion}"/>
+                                <input type="text" class="form-control" max="100" maxlength="100" required="true" name="lugarcapacitacion"/>
                             </div>
                         </div>
 
@@ -58,14 +58,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Hora(*):</label>
                             <div class="col-sm-7">
-                                <input type="text" class="form-control" th:field="*{evaluacioncapacitacion.horaevualuacioncapacitacion}"/>
+                                <input type="text" class="form-control" name="horaevualuacioncapacitacion"/>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Dominio del tema(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{categoriapuesto}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.dominiotema" >
+                                <select class="form-control" name="dominiotema" >
                                     <option>Si</option>
                                     <option>No</option>
 
@@ -77,7 +77,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Habilidades de Comunicacion(*):</label>
                             <div class="col-sm-3">
 
-                                <select class="form-control" name="evaluacioncapacitacion.habilidadcomunicacion" >
+                                <select class="form-control" name="habilidadcomunicacion" >
                                     <option>Si</option>
                                     <option>No</option>
 
@@ -89,7 +89,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Llena sus Espectativas(*):</label>
                             <div class="col-sm-3">
 
-                                <select class="form-control" name="evaluacioncapacitacion.espectativa" >
+                                <select class="form-control" name="espectativa" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -100,7 +100,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Contenido se Desarrollo con Claridad(*):</label>
                             <div class="col-sm-3">
 
-                                <select class="form-control" name="evaluacioncapacitacion.claridadtema" >
+                                <select class="form-control" name="claridadtema" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -111,7 +111,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Aclara dudas con precision(*):</label>
                             <div class="col-sm-3">
 
-                                <select class="form-control" name="evaluacioncapacitacion.alclaradudas" >
+                                <select class="form-control" name="alclaradudas" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -122,7 +122,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Mantiene el Interes del Tema(*):</label>
                             <div class="col-sm-3">
 
-                                <select class="form-control" name="evaluacioncapacitacion.interestema" >
+                                <select class="form-control" name="interestema" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -133,7 +133,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Satisface en el tema(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{nivelpuesto}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.satifacciondetema" >
+                                <select class="form-control" name="satifacciondetema" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -144,7 +144,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Comprension del tema(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.comprenciondetema" >
+                                <select class="form-control" name="comprenciondetema" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -156,7 +156,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Planeacion del tiempo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.planeaciontiempo" >
+                                <select class="form-control" name="planeaciontiempo" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -167,7 +167,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Distribucion del Tiempo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.distribuciontiempo" >
+                                <select class="form-control" name="distribuciontiempo" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -177,7 +177,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Contenido Claro(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.contenidoclaro" >
+                                <select class="form-control" name="contenidoclaro" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -187,7 +187,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">El contenido Es aplicable a su trabajo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.contenidoaplicadotrabajo" >
+                                <select class="form-control" name="contenidoaplicadotrabajo" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -197,7 +197,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Satisfecho con el contenido(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.satisfechocontenido" >
+                                <select class="form-control" name="satisfechocontenido" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -207,7 +207,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Es necesaria la Capacitacion(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.necesariocapacitacion" >
+                                <select class="form-control" name="necesariocapacitacion" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -217,7 +217,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">El equipo tecnologico es el adecuado(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.equipotecnologico" >
+                                <select class="form-control" name="equipotecnologico" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -227,7 +227,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Material Usado fue el apropiado(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.materialutilizado" >
+                                <select class="form-control" name="materialutilizado" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -237,7 +237,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Tiempo Capacitacion fue optimo(*):</label>
                             <div class="col-sm-3">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.tiempocapacitacionoptimo" >
+                                <select class="form-control" name="tiempocapacitacionoptimo" >
                                     <option>Si</option>
                                     <option>No</option>
                                 </select>
@@ -248,7 +248,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Puntualidad Fecha y Hora(*):</label>
                             <div class="col-sm-6">
                                 <!--<input type="text" class="form-control" th:field="*{sublinea}"/>-->
-                                <select class="form-control" name="evaluacioncapacitacion.puntualidad" >
+                                <select class="form-control" name="puntualidad" >
                                     <!--<option> </option>-->
                                     <option>Si</option>
                                     <option>No</option>
@@ -260,14 +260,14 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <label class="col-sm-5 control-label">Comentario o Sugerencia(*):</label>
                             <div class="col-sm-7">
                                 
-                                <input type="text" class="form-control" max="100" maxlength="100" required="true" th:field="*{evaluacioncapacitacion.comentario}"/>
+                                <input type="text" class="form-control" max="100" maxlength="100" required="true" name="comentario"/>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-md-12">
                         <div class="row" align="center">
-                            <button type="button" class="btn btn-default"><a href="#" th:href="@{/evaluaciones/}">Regresar</a></button>
+                            <button type="button" class="btn btn-default"><a href="#" th:href="@{/evaluacioncapacitaciones/}">Regresar</a></button>
                             <button type="submit" class="btn btn-default">Guardar</button>
                             <button type="reset" class="btn btn-default">Limpiar</button>
                         </div>
