--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -144,9 +144,9 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Incapacidades <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-						<li><a href="#"></a></li>
-						<li><a href="#"></a></li>
-					</ul>
+						<li><a href="#"  th:href="@{/incapacidades/new/incapacidad}"> Crear Incapacidad</a></li>
+						<li><a href="#" th:href="@{/incapacidades/}">Consultar incapacidades</a></li>
+                                        </ul>
 				</li>
                                 
                                 
